# rust

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: api.rs  converter.rs  main.rs  models.rs
frontend/currency-exchange-vue/: .cfignore  .env.prod  README.md  index.html  index.tsx  package-lock.json  package.json  tsconfig.json  types.ts
frontend/currency-exchange-vue/src/: App.vue  vite-env.d.ts
frontend/currency-exchange-vue/src/utils/: currencies.js  languages.js
src/: libs.rs  main.rs  utils.rs
